<resources>
    <string name="app_name">QUIZ</string>
    <string name="pass">Password *</string>
    <string name="confirm"> Confirm Password </string>
    <string name="username">Name</string>
    <string name="email">email *</string>
    <string name="submit">Submit</string>
    <string name="image1">lock image</string>
    <string name="register">To register click here</string>
    <string name="question1">à cette intersection, je laisse la priorité à droite</string>
    <string name="Quiz1">QUIZ 1</string>
    <string name="Quiz2">QUIZ 2</string>
    <string name="Quiz3">QUIZ 3</string>
    <string name="Quiz4">QUIZ 4</string>
    <string name="Quiz5">QUIZ 5</string>
    <string name="next">next</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="description_image_quiz1">image of quiz 1</string>
    <string name="description_next_quiz1">image of next button</string>
    <string name="question2">le panneau de danger indique une succession de virages dont le 1er est:</string>
    <string name="choix_2_1">A droite</string>
    <string name="choix_2_2">A gauche</string>
    <string name="description_image_quiz2">image of quiz 2</string>
    <string name="description_next_quiz2">image of next button</string>
    <string name="question3">en tant qu\'automobiliste, vous devez etre plus vigilant lorsque:</string>
    <string name="description_image_quiz3">image of quiz 3</string>
    <string name="description_next_quiz3">image of next button</string>
    <string name="choix_3_1">le tramway est arrete</string>
    <string name="choix_3_2">le tramway circule</string>
    <string name="question4">Avant de partir, je laisse tourner mon moteur pour qu\'il monte en temperature</string>
    <string name="description_image_quiz4">image of quiz 4</string>
    <string name="description_next_quiz4">image of next button</string>
    <string name="choix_4_1">Oui</string>
    <string name="choix_4_2">Non</string>
    <string name="question5">En conduisant, je veux utiliser mon portable pour ecrire un texto ou composer un numero</string>
    <string name="description_image_quiz5">image of quiz 5</string>
    <string name="description_next_quiz5">image of next button</string>
    <string name="choix_5_1">Oui</string>
    <string name="choix_5_2">Non</string>
    <string name="logout">logout</string>
    <string name="tryagain">try again</string>
    <string name="score">Your score is:</string>
    <string name="score_img">the score</string>
    <string name="start_quiz">Start the quiz</string>
    <string name="description_act_3">Quiz image</string>
    <string name="questions_flags">A quel pays associé ce drapeau ? </string>
    <string name="hyperlink"><a href="">Forgot Password?</a></string>
</resources>