<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image1"
        android:src="@drawable/signup" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="9dp"
        android:autofillHints="name"
        android:hint="@string/username"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_action_name_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_action_name_lock"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="37dp"
        android:autofillHints="confirm password"
        android:drawableStart="@drawable/ic_action_name_lock"
        android:hint="@string/confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitButtonRegister"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:textColor="@color/black" />
</LinearLayout>