<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="265dp"
        android:layout_height="214dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/image1"
        android:src="@drawable/quiz"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="349dp"
        android:layout_height="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_action_name_email"
        android:hint=" email *"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="349dp"
        android:layout_height="43dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_action_name_lock"
        android:hint="@string/pass"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/resetpassword"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:contextClickable="true"
        android:text="@string/hyperlink"
        android:textColorLink="@color/CadetBlue"


        android:backgroundTint="@color/license"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/register"
        android:layout_gravity="center" />
</LinearLayout>