<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".score">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/score" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/donut_progress"
        android:layout_width="158dp"
        android:layout_height="153dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button2"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/logout"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/tryagain"
            android:gravity="center"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>