<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".quiz1">

    <TextView
        android:id="@+id/titlepro4"
        android:layout_width="153dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/Quiz4"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imagepro4"
        android:layout_width="353dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/description_image_quiz1"
        android:src="@drawable/java"

        />

    <TextView
        android:id="@+id/Questionpro4"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="11dp"
        android:text="Quel concept de Java est utilisé en combinant des méthodes et des attributs dans une classe?"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="fill" />

    <RadioGroup
        android:id="@+id/rgpro4"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <!--  layout gravity is for the entire groupe
        -->

        <RadioButton
            android:id="@+id/pro4choix1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Polymorphisme" />

        <RadioButton
            android:id="@+id/pro4choix2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Encapsulation" />
        <RadioButton
            android:id="@+id/pro4choix3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Héritage" />

    </RadioGroup>

    <Button
        android:id="@+id/next_pro4"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/pro"
        android:gravity="center"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/pro4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        />

</LinearLayout>